src/objects/PEP_Patient__c.object
<CustomObject>
    <fields>
        <fullName>Caregiver_Consent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field for storing whether the patient agrees to their caregiver to be contacted by advocate or not. This consent is included on the edit profile page from the patient portal.</description>
        <label>Caregiver Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caregiver_First_Name__c</fullName>
        <label>Caregiver First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caregiver_Last_Name__c</fullName>
        <label>Caregiver Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caregiver_Relationship__c</fullName>
        <label>Caregiver Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Partner / Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caregiver_Telephone_1__c</fullName>
        <label>Caregiver Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Condition_Details__c</fullName>
        <label>Condition Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Condition(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COPD</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Acute Coronary Syndrome (ACS)</fullName>
                </value>
                <value>
                    <fullName>Congestive Heart Failure (CHF)</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Hyperlipidemia</fullName>
                </value>
                <value>
                    <fullName>Adult Type II Diabetes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Stores the Date of birth of the patient.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Stores the Email Address of the patient.</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Stores the First Name of the patient. Created as a part of A360 application.</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Stores the Gender of the patient.</description>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                    <default>true</default>
                    <label>Prefer not to answer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Patient_Uninsured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store the value of Is Patient Uninsured?</description>
        <label>Is Patient Uninsured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Stores the Last Name of the patient.</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Stores the Middle Name of the patient. Created as a part of A360 application.</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Language_if_Other__c</fullName>
        <description>This field stores the language name when the Preferred Language picklist value is other.</description>
        <label>Preferred Language (if Other)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Time_to_Call_old__c</fullName>
        <label>Preferred Time to Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_1__c</fullName>
        <formula>Primary_Address__r.Street_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_2__c</fullName>
        <formula>Primary_Address__r.Street_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_3__c</fullName>
        <formula>Primary_Address__r.Street_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Address</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected address is not related to this patient.</errorMessage>
            <filterItems>
                <field>PEP_Patient_Address__c.Patient__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PEP_Patient_Address__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_City__c</fullName>
        <formula>Primary_Address__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Patient</fullName>
                    <default>true</default>
                    <label>Patient</label>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <formula>TEXT(Primary_Address__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Postal_Code__c</fullName>
        <formula>Primary_Address__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_State__c</fullName>
        <formula>TEXT(Primary_Address__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_1__c</fullName>
        <description>Stores the Telephone 1 Number of the Patient.</description>
        <label>Telephone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_2__c</fullName>
        <description>Stores the Telephone 2 Number of the Patient.</description>
        <label>Telephone 2</label>
        <type>Phone</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Gender__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Patients_with_Names</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Gender__c</columns>
        <columns>Email_Address__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>All Patients with Names</label>
    </listViews>
    <listViews>
        <fullName>All_Patients_with_Names_SURESH</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Gender__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Email_Address__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Patients Created Today</label>
    </listViews>
    <listViews>
        <fullName>My_Patients</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Gender__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Caregiver_First_Name__c</columns>
        <columns>Caregiver_Relationship__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Patients</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Patients Created This Week</label>
    </listViews>
    <nameField>
        <displayFormat>PEP-{000000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>